# KRONMULT

./: .Makefile.swp  .gitignore  CMakeLists.txt  Makefile  README.md  a.out  kgemm_nn.cpp  kgemm_nn.hpp  kgemm_nn.hpp.gch  kgemm_nn_batched.cpp  kgemm_nn_batched.hpp  kgemm_nn_batched.hpp.gch  kgemm_nt.cpp  kgemm_nt.hpp  kgemm_nt_batched.cpp  kgemm_nt_batched.hpp  kgemm_tt.cpp  kgemm_tt.hpp  kgemm_tt_batched.cpp  kgemm_tt_batched.hpp  kroncommon.hpp  kronm.hpp  kronm2_xbatched.hpp  kronm_backward.hpp  kronm_forward.hpp  kronm_xbatched.hpp  kronmult1.hpp  kronmult1.hpp.gch  kronmult1_batched.cpp  kronmult1_batched.hpp  kronmult1_pbatched.cpp  kronmult1_pbatched.hpp  kronmult1_vbatched.hpp  kronmult1_xbatched.cpp  kronmult1_xbatched.hpp  kronmult2.hpp  kronmult2_batched.cpp  kronmult2_batched.hpp  kronmult2_pbatched.cpp  kronmult2_pbatched.hpp  (+71 more)
old_make/: make.inc.cpu  make.inc.gpu  make.inc.ptx
